# AXO_Release_Artefacts

./: README.md
FW_AXO_X1/test/unittest/app-axo-x1/: CMakeLists.txt  prj.conf
FW_AXO_X1/test/unittest/app-axo-x1/gcov_report/: coverage.functions.html  coverage.html  coverage.main.cpp.118fcbaaba162ba17933c7893247df3a.html  coverage.version.cpp.f1665614d5fdbf327508dfc37e23d1c9.html
FW_AXO_X1/test/unittest/app-axo-x1/src/: stubs.cpp  stubs.h  test_main.cpp  test_version.cpp
FW_AXO_X1/test/unittest/bus/: CMakeLists.txt  prj.conf
FW_AXO_X1/test/unittest/bus/gcov_report/: coverage.functions.html  coverage.html  coverage.i2cbus.cpp.e979257be66bb03e41d708ff3ef9d630.html  coverage.spibus.cpp.4de6c952163c243f790f0a9164b79d99.html
FW_AXO_X1/test/unittest/bus/src/: __test_mb_client.cpp  __test_mb_server.cpp  stubs.cpp  stubs.h  test_i2c.cpp  test_spi.cpp  test_zz_exit.cpp
FW_AXO_X1/test/unittest/data/: CMakeLists.txt
FW_AXO_X1/test/unittest/data/gcov_report/: coverage.adxl_store.cpp.95c1ccbf4a368e36e9d360bb37c1e077.html  coverage.functions.html  coverage.hit_detect.cpp.be2a0bf73a5f1762c1d54dec9b8d2824.html  coverage.hit_detect.h.b19fd13438c5a0532dbb069473fc4b42.html  coverage.html  coverage.hw_metrics.cpp.42be2acf3df77eee2bd0a084756086db.html  coverage.measurement.cpp.6223191bf98fba13462ef697f24a7c29.html  coverage.metric.cpp.a96c9cbefc9c0691ee4dd2b2b76f19dc.html  coverage.pdata.cpp.52fc092990261ef2672a3b7d3fd195ed.html  coverage.rms.cpp.022363090586250da292e9e285d41862.html  coverage.rms_store.cpp.60e09826f91bc908f42e225d31d2a35c.html
FW_AXO_X1/test/unittest/data/src/: stubs.cpp  stubs.h  test_adxl_store.cpp  test_hit_detect.cpp  test_hw_metrics.cpp  test_measurement.cpp  test_metric.cpp  test_rms.cpp  test_rms_store.cpp
FW_AXO_X1/test/unittest/data2/: CMakeLists.txt  prj.conf
FW_AXO_X1/test/unittest/data2/gcov_report/: coverage.functions.html  coverage.html  coverage.pdata.cpp.52fc092990261ef2672a3b7d3fd195ed.html
FW_AXO_X1/test/unittest/data2/src/: input_accel_bin.h  stubs.cpp  stubs.h  test_pdata.cpp
FW_AXO_X1/test/unittest/disp/: CMakeLists.txt  prj.conf
FW_AXO_X1/test/unittest/disp/gcov_report/: coverage.disptask.cpp.12afc3d041a810c85e70ad687061ff11.html  coverage.filter.cpp.6a3dfb9cc6ec3458a715b927dd1d8090.html  coverage.functions.html  coverage.html  coverage.matrix.cpp.f805732007c190f79b9d1b56a01aee42.html
FW_AXO_X1/test/unittest/disp/src/: stubs.cpp  stubs.h  test_disptask.cpp  test_filter.cpp  test_matrix.cpp
FW_AXO_X1/test/unittest/drv/: CMakeLists.txt  prj.conf
FW_AXO_X1/test/unittest/drv/gcov_report/: coverage.adconverter.cpp.e207f2fd96fe7a6536cabaf7ad588b24.html  coverage.adxl37x.cpp.350a904b830176e0cb79781cb527490b.html  coverage.batt_mgr.cpp.781c1d8e36190f4c3f8dbbc947d568d5.html  coverage.boost.cpp.ea10484643a27e4776bc68568b9cc481.html  coverage.fram.cpp.c90ebb4f0a89463d6a4071b5152ba454.html  coverage.functions.html  coverage.html  coverage.pwm.cpp.574b106b62f79cb2dbc3b761f8daa0e1.html  coverage.shtcx.cpp.f62593279f3cc803693666ea44c6a60a.html
FW_AXO_X1/test/unittest/drv/src/: stubs.cpp  stubs.h  test_adc_adconverter.cpp  test_adc_batt_mgr.cpp  test_i2c_shtcx.cpp  test_pm_boost.cpp  test_pwm_pwm.cpp  test_spi_adxl37x.cpp  test_spi_fram.cpp
FW_AXO_X1/test/unittest/fs/: CMakeLists.txt  prj.conf
FW_AXO_X1/test/unittest/fs/gcov_report/: coverage.flashfs.cpp.b63f8c60e81c944bdd0fdb9390e36510.html  coverage.functions.html  coverage.html
FW_AXO_X1/test/unittest/fs/src/: stubs.cpp  stubs.h  test_flashfs.cpp
FW_AXO_X1/test/unittest/modem/: CMakeLists.txt  prj.conf
FW_AXO_X1/test/unittest/modem/gcov_report/: coverage.functions.html  coverage.html  coverage.lte_monitor.cpp.48405349e2db58245caef08ab37b99ef.html
FW_AXO_X1/test/unittest/modem/src/: stubs.cpp  stubs.h  test_lte_monitor.cpp
FW_AXO_X1/test/unittest/net/: CMakeLists.txt  prj.conf
FW_AXO_X1/test/unittest/net/gcov_report/: coverage.functions.html  coverage.html  coverage.http_connector.cpp.3013848509401f16ec7894c1798fac22.html  coverage.lte_connector.cpp.d96a062e229d4e322f8a6c88bb2924fb.html  coverage.mqtt_connector.cpp.46e2e3de9d97d5c0f060592d926f4102.html
FW_AXO_X1/test/unittest/net/src/: stubs.cpp  stubs.h  test_http_connector.cpp  test_lte_connector.cpp  test_mqtt_connector.cpp
FW_AXO_X1/test/unittest/pm/: CMakeLists.txt  prj.conf
FW_AXO_X1/test/unittest/pm/gcov_report/: coverage.boot_cnt.cpp.d2044259c8713ee016634846dcd895e1.html  coverage.functions.html  coverage.html  coverage.power_mgr.cpp.f302062ad883ab7b26f230df859fa9a3.html  coverage.power_mgr_x1.cpp.c34a712d2b3650ad9607f3e3c7b48de0.html  coverage.reset_ctrl.cpp.5c50d63f55758f7734ecfc4fcde40676.html  coverage.reset_reason.cpp.4f1fd26ef2c99bc8e4507b353d52f7fe.html
FW_AXO_X1/test/unittest/pm/src/: stubs.cpp  stubs.h  test_boot_cnt.cpp  test_power_mgr.cpp  test_power_mgr_x1.cpp  test_reset_ctrl.cpp  test_reset_reason.cpp
FW_AXO_X1/test/unittest/rtos/: CMakeLists.txt  prj.conf  testcase.yaml
FW_AXO_X1/test/unittest/rtos/gcov_report/: coverage.functions.html  coverage.html  coverage.mbox.cpp.9f9931c0548f27e6c877097f19b27dec.html  coverage.mbox.h.5dee58627334d2806a32f02f0a64c4b4.html  coverage.mempool.h.a69071ce17ceddc92e8d36990cb5a93a.html  coverage.mpelem.cpp.2cfc957876bbdfacc5f12f94b820dd22.html  coverage.mpool.cpp.ff78f0c98d7aacb3f89bb97b36704eec.html  coverage.mqueue.h.6e97b4b62082656ce7de14954b606159.html  coverage.mutex.cpp.ac1421eb3015272fe85be410c5742c00.html  coverage.mutex.h.d4a4054d69151417241d2a37c88978f3.html  coverage.sema.cpp.57b297abfa21ebc21f1b9088e2cd924e.html  coverage.sema.h.a55224f565495420f437d497f2434588.html  coverage.task.cpp.f53513b41788e08bd17b47693bc401e4.html  coverage.timer.cpp.a0ea176d18f9c189aacf3840e0fcb308.html  coverage.timer.h.9c31fd9ea16faaddb9f8d2d6a605e19b.html
FW_AXO_X1/test/unittest/rtos/src/: stubs.cpp  stubs.h  test_mbox.cpp  test_mempool.cpp  test_mpelem.cpp  test_mpool.cpp  test_mqueue.cpp  test_mutex.cpp  test_sema.cpp  test_task.cpp  test_timer.cpp
FW_AXO_X1/test/unittest/update/: CMakeLists.txt  prj.conf
FW_AXO_X1/test/unittest/util/: CMakeLists.txt  prj.conf
(+3633 files in other folders)
